Fix #116415: Show Empty text for Current Asset Library

Show "No items" if item count is less than one, to include situations
where it is -1

Pull Request: https://projects.blender.org/blender/blender/pulls/116446